# remoshell

./: .env.docker.example  .env.local.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  PRD.md  README.md  cliff.toml  docker-compose.prod.yml  docker-compose.yml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  deploy-web.yml  release.yml  signaling.yml
client/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  uno.config.ts  vite.config.ts  vitest.config.ts
client/src/: App.tsx  index.tsx
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json  desktop.json  mobile.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: lib.rs  main.rs
client/src/__tests__/: error-recovery.integration.test.ts  files.integration.test.ts  multi-device.integration.test.ts  pairing.integration.test.ts  terminal.integration.test.ts
client/src/components/__tests__/: PairingFlow.test.tsx
client/src/components/a11y/: SkipLink.test.tsx  SkipLink.tsx
client/src/components/devices/: DeviceDetails.test.tsx  DeviceDetails.tsx  DeviceList.test.tsx  DeviceList.tsx  index.ts
client/src/components/error/: ErrorFallback.tsx  index.ts
client/src/components/files/: FileBrowser.test.tsx  FileBrowser.tsx  FileTransferProgress.test.tsx  FileTransferProgress.tsx  index.ts
client/src/components/layout/: AppShell.test.tsx  AppShell.tsx  Header.test.tsx  Header.tsx  Sidebar.test.tsx  Sidebar.tsx  index.ts
client/src/components/notifications/: Toast.tsx  ToastContainer.tsx  index.ts
client/src/components/offline/: OfflineIndicator.test.tsx  OfflineIndicator.tsx
client/src/components/pairing/: PairingCodeInput.test.tsx  PairingCodeInput.tsx  QRScanner.tsx  index.ts
client/src/components/terminal/: XTermWrapper.test.tsx  XTermWrapper.tsx  index.ts
client/src/config/: index.test.ts  index.ts
client/src/lib/lifecycle/: AppLifecycle.test.ts  AppLifecycle.ts  index.ts
client/src/lib/orchestration/: ConnectionOrchestrator.test.ts  ConnectionOrchestrator.ts  index.ts
client/src/lib/orchestration/__tests__/: ConnectionOrchestrator.integration.test.ts  mocks.ts
client/src/lib/performance/: buffer-pool.ts  index.ts  latency.ts  metrics.ts
client/src/lib/protocol/: index.ts  interop.test.ts  messages.ts  serialization.test.ts  serialization.ts  test-vectors.json
client/src/lib/scanner/: BarcodeScanner.test.ts  BarcodeScanner.ts  WebCameraScanner.test.ts  WebCameraScanner.ts  index.ts
client/src/lib/signaling/: SignalingClient.test.ts  SignalingClient.ts  index.ts
client/src/lib/tauri/: TauriIPCBridge.test.ts  TauriIPCBridge.ts  index.ts
client/src/lib/webrtc/: WebRTCManager.test.ts  WebRTCManager.ts
client/src/stores/: connection.test.ts  connection.ts  devices.test.ts  devices.ts  files.test.ts  files.ts  index.ts  notifications.test.ts  notifications.ts  sessions.test.ts  sessions.ts
client/src/styles/: accessibility.css  components.css  mobile-safe-areas.css
client/src/test/: a11y.ts  accessibility.test.ts  performance.test.ts  setup.ts
config/: local.toml.example
crates/daemon/: Cargo.toml
crates/daemon/benches/: message_processing.rs
crates/daemon/src/: config.rs  lib.rs  main.rs  orchestrator.rs  router.rs
crates/daemon/src/devices/: mod.rs  trust_store.rs
crates/daemon/src/files/: browser.rs  mod.rs  permissions.rs  transfer.rs
crates/daemon/src/ipc/: client.rs  messages.rs  mod.rs  pidfile.rs  server.rs
crates/daemon/src/network/: mod.rs  quic.rs  signaling.rs  webrtc.rs
crates/daemon/src/session/: manager.rs  mod.rs  multiplexer.rs  pty.rs
crates/daemon/src/ui/: mod.rs  qr.rs  systemd.rs  tui.rs
crates/daemon/tests/: e2e_integration.rs
crates/protocol/: Cargo.toml
crates/protocol/examples/: test_vectors.rs
crates/protocol/src/: crypto.rs  error.rs  framing.rs  lib.rs  messages.rs  noise.rs
crates/tauri-client/: Cargo.toml
crates/tauri-client/src/: lib.rs
crates/tauri-client/src/commands/: mod.rs
crates/tauri-client/src/quic/: manager.rs  mod.rs
crates/tauri-client/src/storage/: database.rs  keychain.rs  mod.rs
docker/daemon/: Dockerfile.dev  Dockerfile.prod
docker/frontend/: Dockerfile.dev  Dockerfile.prod
docker/signaling/: Dockerfile
docker/turn/: Dockerfile
docs/: ARCHITECTURE.md  LOCAL_DEVELOPMENT.md  PERFORMANCE.md  PROTOCOL.md  QUICKSTART.md  SECURITY.md  VERSIONING.md  configuration.md
scripts/: build-all.sh  bump-version.sh
signaling/: package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.setup.ts  wrangler.toml
signaling/src/: index.test.ts  index.ts  pairing.ts  room.ts
