[workspace]
resolver = "2"
members = [
    "crates/protocol",
    "crates/daemon",
    "crates/tauri-client",
]
exclude = [
    "client/src-tauri",
]

[workspace.package]
version = "0.4.0"
edition = "2021"
authors = ["RemoShell Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/remoshell/remoshell"
rust-version = "1.85"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
rmp-serde = "1.3"
base64 = "0.22"
bytes = "1.11"

# Cryptography
snow = "0.9"
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
sha2 = "0.10"
rand = "0.8"

# Compression
lz4_flex = "0.11"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Networking
webrtc = "0.12"
iroh = "0.32"

# Terminal
portable-pty = "0.8"

# CLI/TUI
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
toml = "0.8"
dirs = "6.0"

# Testing
tempfile = "3.15"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Keychain / Secure Storage
keyring = "3"

# Concurrency
dashmap = "6.1"
uuid = { version = "1.11", features = ["v4"] }

# Tauri
tauri = { version = "2", features = [] }

# Internal crates
protocol = { path = "crates/protocol" }
