[package]
name = "daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "RemoShell daemon - headless service for remote shell connections"

[[bin]]
name = "remoshell-daemon"
path = "src/main.rs"

[dependencies]
# Internal crates
protocol.workspace = true

# Async runtime
tokio.workspace = true

# Networking
webrtc.workspace = true
iroh.workspace = true
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
url = "2.5"

# Terminal
portable-pty.workspace = true

# CLI/TUI
clap.workspace = true
ratatui.workspace = true
crossterm.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
base64.workspace = true
bytes.workspace = true

# Filesystem
dirs.workspace = true

# Concurrency
dashmap.workspace = true
uuid.workspace = true
tokio-util = { version = "0.7", features = ["rt"] }

# Cryptography
sha2.workspace = true
rand.workspace = true
hex = "0.4"

# QR Code generation
qrcode = "0.14"
image = "0.25"

[dev-dependencies]
tempfile.workspace = true
rand.workspace = true
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "message_processing"
harness = false
